--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ x-django-environment: &django-environment
   - DEFAULT_FROM_EMAIL
   - ADMIN_BASE_URL
   - OIDC_RSA_PRIVATE_KEY
+  - S3_MEDIA_STORAGE_URL
 
 x-django-build: &django-build
   context: .
