--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,14 @@ x-django-environment: &django-environment
   - ADMIN_BASE_URL
   - OIDC_RSA_PRIVATE_KEY
   - S3_MEDIA_STORAGE_URL
+  - REQUEST_LOG_MAX_DAYS
+  - REQUEST_LOG_METHODS
+  - REQUEST_LOG_IGNORE_PATHS
+  - GITHUB_APP_ID
+  - GITHUB_APP_PRIVATE_KEY_FILE
+  - GITHUB_APP_PRIVATE_KEY
+  - DEPLOY_ALLOWED_CNAMES
+  - DEPLOY_TASK_GITOPS_REPO
 
 x-django-build: &django-build
   context: .
