--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,15 @@ on: push
 
 jobs:
   build:
-    uses: kausaldev/github-actions/.github/workflows/build-backend.yaml@main
-    secrets: inherit
+    uses: kausaldev/github-actions/.github/workflows/build.yaml@main
+    secrets:
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      EXTRA_PYPI_INDEX: ${{ secrets.EXTRA_PYPI_INDEX }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    with:
+      project_id: watch-backend
+      project_type: django
 
   test:
     needs: [build]
@@ -18,10 +25,12 @@ jobs:
   deploy:
     needs: [build]
     uses: kausaldev/github-actions/.github/workflows/deploy.yaml@main
-    secrets: inherit
+    secrets:
+      gitops_pat: ${{ secrets.GHA_GITOPS_PAT }}
     if: needs.build.outputs.deployment_env
     with:
       docker_image_repo: ${{ needs.build.outputs.image }}
       docker_image_tag: ${{ needs.build.outputs.image_tag }}
-      project_name: watch-backend
+      project_id: watch-backend
       deployment_env: ${{ needs.build.outputs.deployment_env }}
+      build_id: ${{ needs.build.outputs.build_id }}
